// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "label": "mockLabel",
      "triggers": Array [
        Object {
          "actions": Array [],
          "type": "onClick",
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "leaves": Array [
        Object {
          "text": "mockLabel",
        },
      ],
      "object": "text",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node using a textGroup 1`] = `
Object {
  "data": Object {
    "content": Object {
      "textGroup": Array [
        Object {
          "text": Object {
            "value": "mockLabel",
          },
        },
      ],
      "triggers": Array [
        Object {
          "actions": Array [],
          "type": "onClick",
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "leaves": undefined,
      "object": "text",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node with onClick trigger 1`] = `
Object {
  "data": Object {
    "content": Object {
      "label": "mockLabel",
      "triggers": Array [
        Object {
          "actions": Array [
            Object {
              "type": "mockType",
            },
            Object {
              "type": "mockOtherType",
              "value": Object {
                "id": "mockId",
              },
            },
          ],
          "type": "onClick",
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "leaves": Array [
        Object {
          "text": "mockLabel",
        },
      ],
      "object": "text",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node with triggers 1`] = `
Object {
  "data": Object {
    "content": Object {
      "label": "mockLabel",
      "triggers": Array [
        Object {
          "actions": Array [
            Object {
              "type": "mockType",
            },
            Object {
              "type": "mockOtherType",
              "value": Object {
                "id": "mockId",
              },
            },
          ],
        },
        Object {
          "actions": Array [],
          "type": "onClick",
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "leaves": Array [
        Object {
          "text": "mockLabel",
        },
      ],
      "object": "text",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`ActionButton Converter slateToObo converts a Slate node 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "actions": Array [
      Object {
        "type": "mockType",
        "value": "{\\"id\\":\\"mockId\\"}",
      },
      Object {
        "type": "mockType",
        "value": "",
      },
    ],
    "textGroup": Array [
      Object {
        "data": null,
        "text": Object {
          "styleList": Array [],
          "value": "mockText",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
